src/components/snapshots/dreidel__components__net__tests__net_graph_view.snap
---
source: src/components/net.rs
expression: terminal.backend()
---
"┌ [N]ET: eth0 ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│IPv4:     192.168.1.100/24      IPv6:     fe80::1/64                                                                            │"
"│MAC:      aa:bb:cc:dd:ee:ff     MTU:      1500                                                                                  │"
"│Total TX: 12884.9 MB    Total RX: 48318.4 MB    Err TX:   0       Err RX:   0                                                   │"
"│────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│"
"│                                                         ⠈⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉ │TX  1.2 MB/s│"
"│                                                                                                                   │RX  4.8 MB/s│"
"│                                                                                                                   │            │"
"│                                                                                                                   │            │"
"│                                                                                                                   │            │"
"│                                                                                                                   │            │"
"│                                                                                                                   │            │"
"│                                                                                                                   │            │"
"│                                                         ⢀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀ │            │"
"│                                                                                                                   │            │"
"│                                                                                                                   │            │"
"│                                                                                                                   │            │"
"│────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│"
"│TX:   1.2 MB/s  RX:   4.8 MB/s  TX Pkt/s:    850  RX:   3.2K   Esc/q: back                                                      │"
"└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
