src/components/snapshots/dreidel__components__net__tests__net_list_with_chart.snap
---
source: src/components/net.rs
expression: terminal.backend()
---
"┌ [N]ET ───────────────────────────────────────────────────┐"
"│                      ⠈⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠁│TX  1.2 MB/s│"
"│                                             │RX  4.8 MB/s│"
"│                      ⢀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⡀│            │"
"│                                             │            │"
"│──────────────────────────────────────────────────────────│"
"│Iface                                 TX (B/s)    RX (B/s)│"
"│eth0                                    1.2 MB      4.8 MB│"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
