src/components/snapshots/dreidel__components__net__tests__net_no_data.snap
---
source: src/components/net.rs
expression: terminal.backend()
---
"┌ [N]ET ───────────────────────────────────────────────────┐"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
